ready for testing. works on mac but not windows

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,7 +32,7 @@ jar.compress=false
 javac.classpath=\
     ${libs.swing-layout.classpath}
 # Space-separated list of extra javac options
-javac.compilerargs=
+javac.compilerargs=-Xlint:unchecked
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
